--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,7 +1,3 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
-
 @import 'vendor/bootstrap-reboot.min.css';
 @import 'vendor/bootstrap.min.css';
 @import 'vendor/jquery.arcticmodal-0.3.css';
@@ -9,5 +5,9 @@
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 @import 'react-photo-view/dist/react-photo-view.css';
+
+@import 'layout/fonts';
+@import 'layout/general';
+@import 'layout/ui';
 
 @import 'main.css';
