--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,7 +1,4 @@
-@import 'vendor/bootstrap-reboot.min.css';
-@import 'vendor/bootstrap.min.css';
-@import 'vendor/jquery.arcticmodal-0.3.css';
-
+@import 'vendor/bootstrap';
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 @import 'react-photo-view/dist/react-photo-view.css';
@@ -10,4 +7,12 @@
 @import 'layout/general';
 @import 'layout/ui';
 
-@import 'main.css';
+@import 'components/nav';
+@import 'components/footer';
+@import 'components/faq';
+@import 'components/accordeon';
+@import 'components/reviews';
+@import 'components/modal';
+@import 'components/product';
+@import 'components/decor';
+@import 'components/main';
