--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -1,8 +1,13 @@
 h1,
+.h1-title,
 h2,
+.h2-title,
 h3,
+.h3-title,
 h4,
-h5 {
+.h4-title,
+h5,
+.h5-title {
   font-family: var(--font-raleway);
 }
 
@@ -113,7 +118,7 @@ button {
   cursor: pointer;
 }
 
-section,
+main,
 footer,
 header {
   overflow: hidden;
