--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -20,7 +20,7 @@ body {
   font-family: var(--font-base);
   font-weight: 600;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1;
   color: var(--color-font);
   background: linear-gradient(0deg, #010206, #010206),
     linear-gradient(180deg, #1d5fdd 0%, #002e88 51.56%, #00102e 100%);
