--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -10,6 +10,7 @@
     'Cantarell', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --container-main: 1405px;
   --container-narrow: 1196px;
+  --container-wide: 1536px;
   --container-mini: 820px;
 
   /* ui */
@@ -22,9 +23,9 @@
 .theme-main {
   // scheme
   --color-background: #f0f5f9;
-  --color-font: #FFF;
-  --color-font-rgb: #{hexToRbg(#FFF)};
-  --color-font-invert: #010206
+  --color-font: #fff;
+  --color-font-rgb: #{hexToRbg(#fff)};
+  --color-font-invert: #010206;
   --color-gray: #a1a1a1;
   --color-muted: #cbcbcb;
   --color-bg: #010206;
@@ -34,7 +35,7 @@
   // brand colors
   --color-primary: #ffba01;
   --color-primary-rgb: #{hexToRbg(#ffba01)};
-  --color-primary-hover: #FFDE84;
+  --color-primary-hover: #ffde84;
   --color-accent: #600728;
   --color-green: #458940;
   --color-red: #d53536;
