--- a/src/components/Layout/Footer/_footer.scss
+++ b/src/components/Layout/Footer/_footer.scss
@@ -1,10 +1,11 @@
 /* FOOTER */
 .footer {
   padding: 106px 0;
-  background: url('@/assets/img/decor/footer.png') no-repeat center center / cover;
+  background: url('/img/decor/footer.png') no-repeat center center / cover;
 
   &__list {
     position: relative;
+    display: flex;
     z-index: 2;
     justify-content: center;
     flex-wrap: wrap;
@@ -26,6 +27,12 @@
     color: #fff;
     opacity: 0.26;
     letter-spacing: 0.32em;
+    transition: color 0.25s $ease, opacity 0.25s $ease;
+
+    &:hover {
+      color: var(--color-font);
+      opacity: 0.5;
+    }
   }
 }
 
