--- a/src/components/Layout/Header/_header.scss
+++ b/src/components/Layout/Header/_header.scss
@@ -5,32 +5,57 @@
   left: 0;
   right: 0;
   z-index: 100;
+  overflow: hidden;
   background: radial-gradient(
     78.79% 1603.12% at 18.89% 71.76%,
     #eb5f0e 0%,
     #851012 51.82%,
     #480136 100%
   );
+  transition: transform 0.25s $ease;
 
-  &__box {
+  .container {
+    padding: 0 20px;
+  }
+
+  &__wrapper {
     display: flex;
     align-items: center;
     min-height: 114px;
     padding: 17px 0 20px;
+    transition: transform 0.25s $ease;
   }
 
-  &__info {
+  &__main {
     display: flex;
+    flex: 0 1 65%;
+    min-width: 1px;
   }
 
-  &__link {
+  &__actions {
+    flex: 0 0 auto;
+    margin-right: 2px;
+  }
+
+  &__action-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 49.54px;
-    height: 37.32px;
+    width: 49px;
+    height: 37px;
     background: rgb(217 217 217 / 19%);
-    transition: color 0.25s $ease;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: color 0.25s $ease, height 0.25s $ease;
+
+    &:nth-child(1) {
+      margin-bottom: 2px;
+      border-top-left-radius: 10px;
+    }
+
+    &:nth-child(2) {
+      border-bottom-left-radius: 10px;
+    }
 
     .svg-icon {
       font-size: 16px;
@@ -39,47 +64,84 @@
     &:hover {
       color: var(--color-primary);
     }
-
-    &:nth-child(1) {
-      margin-bottom: 1.5px;
-      border-radius: 10px 2px 2px;
-    }
-
-    &:nth-child(2) {
-      border-radius: 2px 2px 2px 10px;
-    }
   }
 
-  &__content {
-    margin-right: 2px;
+  &__purchases {
+    flex: 0 1 auto;
+    min-width: 1px;
   }
 
-  &__boxes {
+  &__auth {
+    display: flex;
+    flex: 0 0 35%;
+    justify-content: center;
+    align-items: center;
+    padding-left: 20px;
+  }
+
+  &__user {
+    flex: 0 0 auto;
+  }
+
+  &__telegram {
     position: relative;
+    display: block;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    max-width: 275px;
+    font-size: 0;
+    border-radius: 6px;
+    transition: box-shadow 0.25s $ease;
+    overflow: hidden;
+
+    &:hover {
+      box-shadow: 0 10px 39px 0 rgb(84 169 235 / 100%);
+    }
+
+    iframe {
+      width: 100%;
+      height: 48px;
+    }
+  }
+
+  &._scrolled {
+    transform: translateY(-20px);
+
+    .header {
+      &__wrapper {
+        transform: translateY(10px);
+      }
+
+      &__action-link {
+        height: 29px;
+      }
+    }
+
+    .purchases {
+      &__slider {
+        .swiper-slide {
+          width: 120px;
+        }
+      }
+
+      &__slide {
+        height: 60px;
+      }
+
+      &__slide-price {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+// user
+
+.header-user {
+  &__wrapper {
     display: flex;
     align-items: center;
-  }
-
-  &__block {
-    width: 141.05px;
-    height: 76.85px;
-    margin-right: 4.5px;
-    border-radius: 5px;
-  }
-
-  &__block:last-child {
-    margin-right: 0;
-  }
-
-  .header .container {
-    margin: 0;
-    padding: 0 20px 0 1px;
-  }
-
-  &__add {
-    display: flex;
-    align-items: center;
-    margin-left: 150px;
     transition: all 0.25s $ease;
   }
 
@@ -99,16 +161,26 @@
     transition: all 0.25s $ease;
   }
 
-  &__log {
-    display: flex;
-    align-items: center;
-    transition: all 0.25s $ease;
-  }
-
   &__plus {
     position: relative;
     left: -7px;
     z-index: 2;
+  }
+
+  &__wrapper:hover {
+    .header__cash {
+      color: #fff;
+      background: linear-gradient(
+        180deg,
+        rgb(217 217 217 / 54%) 0%,
+        rgb(255 255 255 / 54%) 0.01%,
+        rgb(255 255 255 / 23.8%) 100%
+      );
+    }
+  }
+
+  &__right {
+    margin-left: 5px;
   }
 
   &__name {
@@ -119,112 +191,67 @@
     opacity: 0.5;
   }
 
-  &__sum {
+  &__balance {
     font-family: var(--font-canada);
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
     text-align: right;
   }
+}
 
-  &__right {
-    margin-left: 5px;
-  }
-
-  &__log:hover .header__cash {
-    background: linear-gradient(
-      180deg,
-      rgb(217 217 217 / 54%) 0%,
-      rgb(255 255 255 / 54%) 0.01%,
-      rgb(255 255 255 / 23.8%) 100%
-    );
-  }
-
-  &__log:hover .header__cash .svg path {
-    fill: white;
-  }
-
-  &__telegram {
-    display: block;
-    flex: 1 0 auto;
-    width: 100%;
-    height: 100%;
-    max-width: 275px;
-    margin-left: 107px;
-    border-radius: 7px;
-    transition: box-shadow 0.25s $ease;
-    overflow: hidden;
-
-    &:hover {
-      box-shadow: 0 10px 39px 0 rgb(84 169 235 / 100%);
+@include r($hd) {
+  .header {
+    &__main {
+      flex-basis: auto;
     }
 
-    img {
-      width: 100%;
-      height: 100%;
+    &__auth {
+      flex-basis: 350px;
+      justify-content: flex-end;
     }
   }
 }
 
 @include r($xl) {
   .header {
-    &__box {
-      justify-content: space-between;
-      padding: 14px 20px 14px 2px;
-    }
-
-    &__telegram {
-      margin-left: 20px;
-    }
-
-    &__block:nth-child(n + 5) {
-      display: none;
+    &__auth {
+      flex-basis: 310px; // 35px
     }
   }
 }
 
 @include r($lg) {
   .header {
-    &__block:nth-child(n + 3) {
-      display: none;
+    &__wrapper {
+      min-height: 1px;
+      padding-top: 10px;
+      padding-bottom: 12px;
     }
   }
 }
 
 @include r($md) {
   .header {
-    &__block {
-      display: none;
+    .container {
+      padding-left: 12px;
+      padding-right: 20px;
     }
-
-    &__box {
-      justify-content: space-between;
-    }
-  }
-
-  .header .container {
-    margin: 0;
-    padding: 0 1px;
   }
 }
 
 @include r($sm) {
   .header {
-    &__box {
-      padding: 14px 5px 14px 2px;
-    }
+    // &__wrapper {
+    //   padding: 14px 5px 14px 2px;
+    // }
 
-    &__add {
+    &__user {
       margin-left: 0;
     }
 
     &__telegram {
       max-width: 238px;
     }
-  }
-
-  .header .container {
-    margin: 0 auto;
-    padding: 0 10px 0 1px;
   }
 }
