--- a/src/components/Product/_home.scss
+++ b/src/components/Product/_home.scss
@@ -6,16 +6,18 @@
 
   &__fire {
     position: absolute;
-    top: -100px;
+    top: -114px;
     left: 0;
-    z-index: -1;
+    z-index: 1;
   }
 
   &__products {
     margin-top: 100px;
   }
 
-  // &__category{}
+  &__category {
+    position: relative;
+  }
 
   &__category-box {
     display: flex;
@@ -27,25 +29,29 @@
     position: relative;
     margin: 0 auto 80px;
     text-align: center;
+    text-transform: uppercase;
 
-    &::before,
-    &::after {
-      position: absolute;
-      content: '';
-      display: block;
-      top: 20%;
-      width: 425px;
-      height: 5px;
-      background: white;
-      pointer-events: none;
+    span {
+      position: relative;
+      display: inline-block;
+      z-index: 2;
+      padding: 0 45px;
+      background: #010206;
     }
 
     &::before {
-      right: -469px;
-    }
-
-    &::after {
-      right: -469px;
+      position: absolute;
+      content: '';
+      display: block;
+      top: 50%;
+      left: 50%;
+      z-index: 1;
+      width: 100%;
+      height: 5px;
+      max-width: 80%;
+      background: #fff;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
     }
   }
 
@@ -55,17 +61,6 @@
     left: -312px;
     z-index: -1;
     width: auto;
-  }
-}
-
-.slider {
-  &__title {
-    margin-bottom: 30px;
-  }
-
-  &__card {
-    position: relative;
-    z-index: 2;
   }
 }
 
@@ -98,10 +93,6 @@
 }
 
 @include r($sm) {
-  .slider__title {
-    margin-bottom: 10px;
-  }
-
   .home {
     padding: 40px 0 2px;
 
@@ -131,19 +122,9 @@
     &__category-title {
       margin-bottom: 50px;
 
-      &::before,
-      &::after {
-        top: 38%;
-        width: 95px;
-        height: 4px;
-      }
-
       &::before {
-        left: -106px;
-      }
-
-      &::after {
-        right: -106px;
+        width: 70%;
+        height: 4px;
       }
     }
   }
