--- a/src/components/Ui/Checkbox/_checkbox.scss
+++ b/src/components/Ui/Checkbox/_checkbox.scss
@@ -39,7 +39,7 @@
     height: 20px;
     margin: 2px;
     font-size: 8px;
-    color: white;
+    color: #fff;
     border: 2px solid var(--color-font);
     border-radius: 4px;
     transition: background 0.1s $ease, border 0.1s $ease;
