--- a/src/components/Ui/Loader/_loader.scss
+++ b/src/components/Ui/Loader/_loader.scss
@@ -14,10 +14,8 @@
 }
 
 .loading-block__title {
-  margin: 0 0 8px;
-  font-weight: bold;
-  font-size: 22px;
-  color: var(--color-fon);
+  margin: 0 0 12px;
+  color: var(--color-font);
 }
 
 .loader {
@@ -36,17 +34,70 @@
   &._page {
     position: fixed;
     z-index: 999;
-    background: var(--bg);
+    background: rgb(0 0 0 / 50%);
   }
 
   &._overlay {
     position: absolute;
     z-index: 1;
-    background: rgb(var(--bg-rgb) 0.5);
+    background: rgb(0 0 0 / 50%);
   }
 
   &._active {
     opacity: 1;
     pointer-events: all;
+  }
+}
+
+.loader-anim {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  gap: 5px;
+
+  > * {
+    flex: 0 0 auto;
+    width: 8px;
+    height: 8px;
+    background: var(--color-primary);
+    border-radius: 4px;
+    animation: loader 1.5s linear infinite;
+    backface-visibility: hidden;
+  }
+
+  > *:nth-child(1) {
+    animation-delay: 0s;
+  }
+
+  > *:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+
+  > *:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+
+  > *:nth-child(4) {
+    animation-delay: 0.6s;
+  }
+
+  > *:nth-child(5) {
+    animation-delay: 0.8s;
+  }
+}
+
+@keyframes loader {
+  0% {
+    height: 8px;
+  }
+
+  20% {
+    height: 50px;
+  }
+
+  40% {
+    height: 8px;
   }
 }
